# robotsix-central-deploy

./: .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .hadolint.yaml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  _gen_openapi.py  _gen_openapi_tmp.py  _mill_build.py  docker-compose.yml  memory_ledger.txt  mkdocs.yml  mypy-baseline.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  docs.yml  lint-workflows.yml  release.yml  scan-container.yml
.robotsix-mill/: config.yaml
changelog.d/: 20260703T083500Z-frontend-show-running-digest-deploy-hist-9443.misc.md  20260703T083849Z-set-up-towncrier-newsfragments-changelog-82c3.misc.md  20260703T091511Z-remove-dead-onboardconfirmresponse-schem-c5d5.misc.md  20260703T091548Z-add-unit-test-for-lifecycle-app-py-route-ab55.misc.md  20260703T091548Z-add-unit-tests-for-lifecycle-cli-py-cli-37ce.misc.md  20260703T091548Z-eliminate-triple-systemsettings-field-du-49e1.misc.md  20260703T091548Z-refactor-lifecycle-backend-py-split-1541-1898.misc.md  20260703T091548Z-refactor-lifecycle-routers-services-py-s-2fcd.misc.md  20260703T101019Z-host-port-auto-assignment-at-onboarding-2b46.misc.md  20260703T101218Z-standards-round-2-align-pre-commit-hooks-71a3.misc.md  20260703T110407Z-remove-the-robotsix-deploy-stateful-labe-6b34.misc.md  20260703T110408Z-complete-contract-8-json-typed-schema-on-2b31.misc.md  20260703T112658Z-move-containerhealthsummary-import-under-0c79.misc.md  20260703T112658Z-refactor-180-line-lifespan-function-in-l-7ec4.misc.md  20260703T114010Z-classify-src-robotsix-central-deploy-car-aec7.misc.md  20260703T114010Z-classify-src-robotsix-central-deploy-yam-b245.misc.md  20260703T114010Z-reorganize-module-volume-audit-align-tes-0328.misc.md  20260703T114840Z-apply-a-default-memory-limit-to-managed-5eb7.misc.md  20260703T114840Z-host-setup-docker-log-rotation-json-file-6431.misc.md  20260703T143250Z-fleet-global-llmio-tier-configuration-le-df2f.misc.md  20260703T145715Z-migrate-onboarding-config-handling-to-th-6a57.misc.md  20260703T155244Z-remove-dead-getattr-in-caretaker-init-py-e785.misc.md  20260703T155244Z-remove-deprecated-lifecycle-backend-py-r-69db.misc.md  20260703T163202Z-dashboard-claude-auth-panel-built-in-log-1c15.misc.md  20260703T163202Z-fix-settings-overlay-ordering-so-hot-app-aabb.misc.md  20260703T163202Z-managed-claude-auth-named-volume-retarge-3daa.misc.md  20260703T180457Z-add-periodic-scan-container-workflow-to-2e82.misc.md  20260703T223757Z-component-removal-must-atomically-clear-1c2e.misc.md  20260703T230000Z-claude-auth-pkce-login-flow-no-helper-container.misc.md  20260703T234500Z-move-claude-auth-panel-into-settings.misc.md  20260704T001648Z-caretaker-mill-reachable-false-while-mil-6c54.misc.md  20260704T001648Z-chat-access-allow-chat-access-flag-get-c-6066.misc.md  20260704T001648Z-config-ui-suggest-peer-component-urls-fo-2a50.misc.md  20260704T010134Z-enable-triage-boilerplate-periodic-workf-caa3.misc.md  20260704T035854Z-add-codeql-yml-using-shared-reusable-wor-ae8e.misc.md  20260704T035854Z-add-lint-workflows-yml-using-shared-reus-fac9.misc.md  20260704T042736Z-ci-fix-out-of-scope-ci-failure-lint-work-b75f.misc.md  20260704T045501Z-component-deploy-never-refreshes-contrac-b1d7.misc.md  20260704T055419Z-compose-parser-drops-tmpfs-and-mangles-l-7ca7.misc.md  20260704T063718Z-forced-user-host-uid-on-sibling-containe-44eb.misc.md  (+272 more)
config/: components.yaml  config.example.json  config.json  config.schema.json
deploy/: docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOY_CONTRACT.md  api.md  configuration.md  deploy-contract.md  deployment.md  index.md  modules.yaml  nginx-deploy.conf  openapi.json
docs/architecture/: registry_check.md
docs/caretaker/: overview.md
docs/caretaker/volume_audit/: overview.md
docs/gateway/: overview.md
docs/lifecycle/: api.md  configuration.md  openapi.json
docs/onboard/: overview.md
docs/registry/: overview.md
docs/registry_check/: overview.md
docs/ui/: DEPLOY_CONTRACT.md
docs/volume_audit/: overview.md
scripts/: run_tests.sh
src/robotsix_central_deploy/: __init__.py  _http.py  _yaml_utils.py  deploy_lock.py
src/robotsix_central_deploy/caretaker/: __init__.py  mill_client.py  models.py  phases.py  scheduler.py
src/robotsix_central_deploy/chat_skills/: __init__.py  langfuse.md
tests/: conftest.py  test_config_yaml_store.py  test_onboard_api.py  test_onboard_parser.py
tests/caretaker/: test_mill_client.py  test_phases.py  test_scheduler.py
tests/deploy_lock/: test_deploy_lock.py
tests/gateway/: test_gateway.py
tests/lifecycle/: conftest.py  run_chat_tests.py  test_app.py  test_auth.py  test_backend.py  test_chat.py  test_chat_agent.py  test_chat_components.py  test_cli.py  test_config_drift.py  test_config_schema_refresh.py  test_config_utils.py  test_contract_refresh.py  test_csrf.py  test_deploy.py  test_deploy_history.py  test_deploy_history_store.py  test_deps.py  test_disk.py  test_env_store.py  test_env_sync_keys.py  test_error_handlers.py  test_github_app.py  test_github_auth_dependency.py  test_health.py  test_hypothesis.py  test_logging_config.py  test_models.py  test_onboard.py  test_rate_limiter.py  test_secure_headers.py  test_self_update.py  test_server.py  test_services.py  test_services_config.py  test_services_env.py  test_session.py  test_settings_cli.py  test_settings_router.py  test_siblings.py  (+4 more)
tests/onboard/: test_api.py  test_config_yaml_store.py  test_fetcher.py  test_parser.py  test_port_utils.py
tests/registry/: test_chat_agent_audit_store.py  test_config_store_migration.py  test_loader.py  test_models.py  test_secret_key.py  test_settings_store.py  test_store_utils.py
tests/registry_check/: test_checker.py
tests/ui/: test_claude_auth.py  test_ui_router.py
tests/volume_audit/: test_growth.py  test_reporter.py  test_scheduler.py
tests/yaml_utils/: test_yaml_utils.py
(+141 files in other folders)
