[project]
name = "robotsix-central-deploy"
version = "0.1.0"
description = "Central deployment & lifecycle server for the robotsix suite"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "docker>=7.0",
    "cryptography>=41.0",
    "websockets>=12.0",
    "robotsix-board-agent @ git+https://github.com/damien-robotsix/robotsix-board-agent.git@3b999fc697fd1112024160f6f5ba45bd89e7f5d0",
]

# Dev tooling as a PEP 735 dependency-group (the fleet convention), pulled
# in automatically on `uv sync` via [tool.uv] default-groups so the shared
# python-ci.yml's `uv run mypy/ruff` steps find their tools.
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "coverage>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "types-PyYAML>=6.0",
    "types-docker>=7.1",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
robotsix-lifecycle = "robotsix_central_deploy.lifecycle.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.package-data]
"robotsix_central_deploy" = ["ui/*.html", "ui/*.md"]

[tool.ruff.lint]
extend-select = ["S"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.deptry]
known_first_party = ["robotsix_central_deploy"]
per_rule_ignores = { "DEP002" = ["pytest", "pytest-asyncio", "mypy", "coverage", "pytest-cov", "ruff"], "DEP003" = ["starlette", "requests"] }
