[project]
name = "robotsix-central-deploy"
version = "0.1.0"
description = "Central deployment & lifecycle server for the robotsix suite"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "docker>=7.2.0",
    "cryptography>=41.0",
    "websockets>=16.1.1",
    "jsonschema>=4.0",
    "structlog>=24.0",
    "PyGithub>=2.9.0",
    "asgi-csrf>=0.11",
    "secure>=2.0",
    "robotsix-board-agent @ git+https://github.com/damien-robotsix/robotsix-board-agent.git@3b999fc697fd1112024160f6f5ba45bd89e7f5d0",
    "robotsix-config @ git+https://github.com/damien-robotsix/robotsix-config.git@424f8ec5140e14e9699b92d5c3755d929625b570",
]

# Dev tooling as a PEP 735 dependency-group (the fleet convention), pulled
# in automatically on `uv sync` via [tool.uv] default-groups so the shared
# python-ci.yml's `uv run mypy/ruff` steps find their tools.
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=2.3.0",
    "coverage>=7.15.2",
    "pytest-cov>=4.0",
    "ruff>=0.15.22",
    "types-PyYAML>=6.0",
    "types-docker>=7.1.0.20260712",
    "towncrier>=24.0",
    "hypothesis>=6.156.7",
    "robotsix-modules @ git+https://github.com/damien-robotsix/robotsix-modules.git@39a1d024f7656de661779c594c2b07bb84162023",
]
docs = [
    "mkdocs-material>=9.7.7",
    "mkdocstrings[python]>=1.0.6",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
robotsix-lifecycle = "robotsix_central_deploy.lifecycle.cli:main"

[build-system]
requires = []
build-backend = "_mill_build"
backend-path = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_central_deploy"]

# The symlink src/robotsix_central_deploy/ui/DEPLOY_CONTRACT.md points
# outside the packages directory (→ docs/ui/DEPLOY_CONTRACT.md).  Hatchling
# does not follow out-of-tree symlinks when building wheels, so we force-
# include the canonical file to ensure the content is available at runtime.
[tool.hatch.build.targets.wheel.force-include]
"docs/ui/DEPLOY_CONTRACT.md" = "robotsix_central_deploy/ui/DEPLOY_CONTRACT.md"

# The robotsix-* first-party dependencies are git-pinned direct references.
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
pythonpath = [".deps"]
markers = [
    "docker: marks tests that require a real Docker daemon (skipped by default in CI)",
]

[tool.ruff.lint]
extend-select = ["S"]

[tool.ruff.lint.per-file-ignores]
# Bandit S-rules are designed for production code.  Test files routinely use
# hard-coded sentinel strings (S105/S106), bind to localhost/0.0.0.0 in test
# fixtures (S104), assert freely (S101), and reference /tmp (S108).
"tests/**/*.py" = ["S101", "S104", "S105", "S106", "S108"]
# S101: type-narrowing asserts after explicit None / error-path checks —
# they encode invariants, not security issues.
"src/robotsix_central_deploy/gateway/router.py" = ["S101"]
# S101: assert that store/backend/config were initialised (app-startup guard).
"src/robotsix_central_deploy/lifecycle/deps/dependencies.py" = ["S101"]
"src/robotsix_central_deploy/lifecycle/deps/lifespan.py" = ["S101"]
# S105: CLAUDE_AUTH_TOKEN_URL is a URL, not a password.
# S110: best-effort inspection paths where failures are intentionally swallowed.
"src/robotsix_central_deploy/lifecycle/deps/background.py" = ["S105", "S110"]
# S110: best-effort inspection paths where failures are intentionally swallowed.
"src/robotsix_central_deploy/lifecycle/backends/docker_sdk.py" = ["S110"]
# S104: 0.0.0.0 bind is intentional for the containerised service.
# S105: "secrets.key" is a filename, not a hardcoded credential.
"src/robotsix_central_deploy/lifecycle/config.py" = ["S104", "S105"]
# S101 + S110: see notes above.
"src/robotsix_central_deploy/lifecycle/routers/services.py" = ["S101", "S110"]
# S105: SECRET_MASK is a sentinel placeholder, not a real credential.
"src/robotsix_central_deploy/lifecycle/settings_router.py" = ["S105"]
# S603 + S607: git clone via subprocess is constrained (https-only gate, temp dir);
# the onboard endpoint is authenticated so this is an accepted risk.
"src/robotsix_central_deploy/onboard/fetcher.py" = ["S603", "S607"]
# S603 + S607: test infrastructure uses subprocess.run to create local git repos
# with hardcoded, trusted arguments — no untrusted input flows through these calls.
"tests/onboard/test_fetcher.py" = ["S603", "S607"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asgi_csrf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.deptry]
known_first_party = ["robotsix_central_deploy"]
per_rule_ignores = { "DEP001" = ["hatchling"], "DEP002" = ["pytest", "pytest-asyncio", "mypy", "coverage", "pytest-cov", "ruff", "robotsix-config", "structlog"], "DEP003" = ["starlette", "requests", "tomli", "itsdangerous"] }

[tool.towncrier]
package = "robotsix_central_deploy"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals / Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = false
